--- a/InfoFieldSc.xaml
+++ b/InfoFieldSc.xaml
@@ -71,7 +71,7 @@
 
             <materialDesign:Card Grid.Row="2" Margin="5" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <ListView  ItemsSource="{Binding _List_field_sc}" SelectedItem="{Binding SelectedItemBooking, Mode=OneWayToSource}">
+                    <ListView  ItemsSource="{Binding ListbookingInfosc}" SelectedItem="{Binding SelectedItemBooking, Mode=OneWayToSource}">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Id" DisplayMemberBinding="{Binding id}"></GridViewColumn>
@@ -89,3 +89,5 @@
         </Grid>
     </Grid>
 </Window>
+
+
