--- a/SoccerField.xaml
+++ b/SoccerField.xaml
@@ -42,7 +42,8 @@
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Button Grid.Column="0" Background="#00ADB5" Command="{Binding ShowAddCommand}" HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5"  HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
                 <Grid>
@@ -54,7 +55,7 @@
                     <TextBlock Grid.Column="1" Margin="5 0 0 0" Text="Add" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 </Grid>
             </Button>
-            <Button Grid.Column="2" Background="#00ADB5" Command="{Binding ShowEditFieldCommand}"  HorizontalAlignment="Left"  materialDesign:ButtonAssist.CornerRadius="5" HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
+            <Button Grid.Column="1" Background="#00ADB5" Command="{Binding ShowEditFieldCommand}"  HorizontalAlignment="Left"  materialDesign:ButtonAssist.CornerRadius="5" HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="5*"/>
@@ -65,13 +66,23 @@
                         <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
                     <materialDesign:PackIcon Grid.Column="0" Kind="Adjust" VerticalAlignment="Center" HorizontalAlignment="Center" Width="Auto" Height="Auto" Grid.ColumnSpan="2" Margin="0,0,72,-0.369" Grid.RowSpan="2"/>
-                    <TextBlock Grid.Column="1" Margin="18.369,3,13,3.631" Text="Adjust" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.RowSpan="2"/>
+                    <TextBlock Grid.Column="1"  Text="Adjust" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.RowSpan="2"/>
+                </Grid>
+            </Button>
+            <Button Grid.Column="3" Background="#00ADB5" Command="{Binding FastBookingCommand}" HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5"  HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="150">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="3*"/>
+                    </Grid.ColumnDefinitions>
+                    <materialDesign:PackIcon Grid.Column="0" Kind="FastForward" VerticalAlignment="Center" HorizontalAlignment="Center" Width="Auto" Height="Auto"/>
+                    <TextBlock Grid.Column="1" Margin="5 0 0 0" Text="Fast booking" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 </Grid>
             </Button>
         </Grid>
         <DockPanel Grid.Row="3">
             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                <ItemsControl x:Name="IC_football" ItemsSource="{Binding _List_field_sc}">
+                <ItemsControl x:Name="IC_football" ItemsSource="{Binding _List_field_Sc}">
 
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
