--- a/InfoFieldSc.xaml
+++ b/InfoFieldSc.xaml
@@ -16,7 +16,7 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         ResizeMode="NoResize"
         WindowStyle="None"
-        DataContext="{StaticResource ScBookingVM}"
+        DataContext="{StaticResource SoccerFieldVM}"
         x:Name="InfoFiledSc"
         Title="InfoFieldSc" Height="800" Width="1300">
 
@@ -41,17 +41,20 @@
 
             <materialDesign:Card Grid.Row="0" Margin="5">
                 <WrapPanel Margin="0 0 0 10">
+                    <TextBox x:Name="txbIdfield" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Id field" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
                     <TextBox x:Name="txbCusName" Text="{Binding addcustomername, UpdateSourceTrigger=PropertyChanged}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Customer name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
                     <TextBox x:Name="txbCusPhone" Text="{Binding addcustomerphone, UpdateSourceTrigger=PropertyChanged}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Phone number" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
                     <DatePicker x:Name="dp" VerticalAlignment="Center" SelectedDate="{Binding adddateplay}" Width="100" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Date play" Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
-                    <materialDesign:TimePicker SelectedTime="{Binding addstarttime}"
+                    <materialDesign:TimePicker Is24Hours="True"
+ SelectedTime="{Binding addstarttime}"
                         x:Name="startT_picker"
                         Margin="20,9,5,0"
                         HorizontalAlignment="Center"         
                 VerticalAlignment="Center"
                         materialDesign:HintAssist.Hint="Start time" 
                         ></materialDesign:TimePicker>
-                    <materialDesign:TimePicker SelectedTime="{Binding addendtime}"
+                    <materialDesign:TimePicker Is24Hours="True"
+ SelectedTime="{Binding addendtime}"
                         x:Name="endT_picker"
                         HorizontalAlignment="Center"         
                 VerticalAlignment="Center"
@@ -63,15 +66,15 @@
 
             <materialDesign:Card Grid.Row="1" Margin="5">
                 <WrapPanel>
-                    <Button Content="Thêm" Margin="20" Width="100" Click="Button_Add"></Button>
-                    <Button Command="{Binding EditCommand}" Content="Sửa" Margin="20" Width="100"></Button>
-                    <Button Command="{Binding DeleteCommand}" Content="Xóa" Margin="20" Width="100"></Button>
+                    <Button Command="{Binding AddBookingCommand}" Content="Thêm" Margin="20" Width="100" Click="Button_Add" ></Button>
+                    <Button Command="{Binding EditBookingCommand}" Content="Sửa" Margin="20" Width="100"></Button>
+                    <Button Command="{Binding DeleteBookingCommand}" Content="Xóa" Margin="20" Width="100"></Button>
                 </WrapPanel>
             </materialDesign:Card>
 
             <materialDesign:Card Grid.Row="2" Margin="5" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <ListView  ItemsSource="{Binding ListbookingInfosc}" SelectedItem="{Binding SelectedItemBooking, Mode=OneWayToSource}">
+                    <ListView  ItemsSource="{Binding list_with_id}" SelectedItem="{Binding SelectedItemBooking, Mode=OneWayToSource}">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Id" DisplayMemberBinding="{Binding id}"></GridViewColumn>
@@ -89,5 +92,3 @@
         </Grid>
     </Grid>
 </Window>
-
-
